--- a/1746.html
+++ b/1746.html
@@ -99,7 +99,7 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;">
-                <p style="margin: 0; font-size: 3vw;">Teil 1: Kanal</p>
+                <p style="margin: 0; font-size: 3vw; color: #e3d2b4;">Teil 1: Kanal</p>
                 <img src="img/channel_thumbnail.jpg" alt="Bildbeschreibung" style="max-width: 100%;"><a class="btn1 btn btn-primary btn-lg" role="button" href="1746kanal.html">
                     Öffnen
                 </a>
@@ -119,7 +119,7 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;">
-                <p style="margin: 0; font-size: 3vw;">Teil 2: Atlantik</p>
+                <p style="margin: 0; font-size: 3vw; color: #e3d2b4;">Teil 2: Atlantik</p>
                 <img src="img/atlantic_thumbnail.jpg" alt="Bildbeschreibung" style="max-width: 100%;"><a class="btn1 btn btn-primary btn-lg" role="button" href="1746atlantik.html">
                     Öffnen
                 </a>
@@ -139,7 +139,7 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;">
-                <p style="margin: 0; font-size: 3vw;">Teil 3: Amerika</p>
+                <p style="margin: 0; font-size: 3vw; color: #e3d2b4;">Teil 3: Amerika</p>
                 <img src="img/america_thumbnail.jpg" alt="Bildbeschreibung" style="max-width: 100%;"><a class="btn1 btn btn-primary btn-lg" role="button" href="1746amerika.html">
                     Öffnen
                 </a>
