--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
          </div><script type="text/javascript" src="js/main.js"></script><script>
                   function search() {
                       var searchQuery = document.getElementById("searchInput").value;
-                      var baseUrl = "http://127.0.0.1:5500";
+                      var baseUrl = "https://mprell.github.io/moravians-at-sea-Prod";
                       var searchUrl = baseUrl + "/suche.html?q=" + encodeURIComponent(searchQuery);
                       window.location.href = searchUrl;
                   }
