--- a/index.html
+++ b/index.html
@@ -833,8 +833,8 @@
       <footer class="footer l-box pure-g">
          
          <div class="pure-u-1 pure-u-md-5-24 carbonbadgeContainer">
-            <span id="wcb" class="carbonbadge wcb-d"></span>
-            <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js"></script>
+            <div id="wcb" class="carbonbadge wcb-d"></div>
+			<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
             </div>
          
          <div class="pure-u-1 pure-u-md-14-24">
