--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
          
          <div class="pure-u-1 pure-u-md-5-24 carbonbadgeContainer">
             <div id="wcb" class="carbonbadge wcb-d"></div>
-			<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
+			<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js"></script>
             </div>
          
          <div class="pure-u-1 pure-u-md-14-24">
