--- a/1753.html
+++ b/1753.html
@@ -75,9 +75,9 @@
             <h1 class="travel-overview">Textanalyse mit Voyant Tools</h1>
             <div><a class="pure-button button-secondary" onclick="ShowHTUFunction()">How to Use</a></div>
             <div class="pure-g">
-               <div class="pure-u-1 pure-u-md-11-24"><iframe class="voyant-iframe" src="https://voyant-tools.org/?view=cirrus&amp;stopList=https://www.moravians-at-sea.uni-jena.de/voyant/stopwords.txt&amp;input=https://www.moravians-at-sea.uni-jena.de/voyant/Diarium1753.txt"></iframe></div>
+               <div class="pure-u-1 pure-u-md-11-24"><iframe class="voyant-iframe" src="https://voyant-tools.org/?view=cirrus&amp;stopList=https://mprell.github.io/moravians-at-sea-Prod/voyant/stopwords.txt&amp;input=https://mprell.github.io/moravians-at-sea-Prod/voyant/Diarium1753.txt"></iframe></div>
                <div class="pure-u-1 pure-u-md-1-24"></div>
-               <div class="pure-u-1 pure-u-md-11-24"><iframe class="voyant-iframe" src="https://voyant-tools.org/?view=reader&amp;input=https://www.moravians-at-sea.uni-jena.de/voyant/Diarium1753.txt"></iframe></div>
+               <div class="pure-u-1 pure-u-md-11-24"><iframe class="voyant-iframe" src="https://voyant-tools.org/?view=reader&amp;input=https://mprell.github.io/moravians-at-sea-Prod/voyant/Diarium1753.txt"></iframe></div>
             </div>
          </div>
          <div class="HTUPopuptext" id="HTUPopup">
