--- a/1742amerika.html
+++ b/1742amerika.html
@@ -88,7 +88,7 @@
          <div class="pure-g">
             <div class="pure-u-3-24"></div>
             <div class="map pure-u-18-24">
-               <div id="main2"><svg xmlns="http://www.w3.org/2000/svg" id="map" viewBox="0 0 2862 3973" style="background-image: url('img/america.jpg');"><svg id="graph">
+               <div id="main2"><svg xmlns="http://www.w3.org/2000/svg" id="map" viewBox="0 0 2862 3973" style="background-image: url('img/america.webp');"><svg id="graph">
                         
                         <g stroke="red" stroke-width="10" stroke-linecap="round" fill="none">
                            
