--- a/1761land.html
+++ b/1761land.html
@@ -90,7 +90,7 @@
          <div class="pure-g">
             <div class="pure-u-3-24"></div>
             <div class="map pure-u-18-24">
-               <div id="main2"><svg xmlns="http://www.w3.org/2000/svg" id="map" viewBox="0 0 8042 5446" style="background-image: url('img/central_europe.jpg');"><svg id="graph">
+               <div id="main2"><svg xmlns="http://www.w3.org/2000/svg" id="map" viewBox="0 0 8042 5446" style="background-image: url('img/central_europe.webp');"><svg id="graph">
                         
                         <g stroke="red" stroke-width="15" stroke-linecap="round" fill="none">
                            
