--- a/1752.html
+++ b/1752.html
@@ -75,7 +75,10 @@
          <div class="pure-g">
             <div class="pure-u-1 pure-u-md-3-24"></div>
             <div class="pure-u-1 pure-u-md-2-24"><a class="pure-button button-secondary howto-button" onclick="ShowHTUFunction()">How to Use</a><a class="pure-button button-secondary tei-button" target="_blank" href="github.com">XML/TEI</a></div>
-            <div class="pure-u-1 pure-u-md-13-24"></div>
+            <div class="pure-u-1 pure-u-md-13-24">
+               <div class="audio-container"><audio id="audio1" controls="controls" preload="none" data-src="audio/1752.opus">
+                     <source src="audio/1752.opus" type="audio/ogg"></source></audio></div>
+            </div>
             <div class="pure-u-1 pure-u-md-3-24"><a class="pure-button button-secondary reset-button" onclick="resetZoom()">Reset Zoom</a><a id="routeOff" class="pure-button button-secondary hidegraph-button" onclick="hidegraph()">Route ausblenden</a><a id="routeOn" class="pure-button button-secondary showgraph-button" onclick="showgraph()">Route einblenden</a></div>
             <div class="pure-u-1 pure-u-md-3-24"></div>
          </div>
