--- a/index.html
+++ b/index.html
@@ -442,6 +442,118 @@
                <circle cx="936" cy="942" r="20"></circle>
                <circle cx="850" cy="957" r="20"></circle>
             </g></svg></div>
+      <div id="quotes">
+         <h2>Ausgewählte Einträge</h2>
+         <div class="arrows"><button class="arrow-left">〈</button><button class="arrow-right">〉</button></div>
+         <p>Es begegneten uns heute 2 Schiffe die von St. Christophel kommen, und nach London
+            giengen. Mit denen schickten wir Briefe nach London, darinnen wir Nachricht gaben
+            von unsern Umständen. Sie wusten Anfangs nicht was vor Schiff es wären, aber die meisten
+            unsrer Brr: waren sehr phlegmatisch dabey, ob sie gleich etl: Canonen loßschoßen,
+            u alle Matrosen dachten es seyen Spanier.<br /><a href="1742atlantik.html#diaryPopup23">24. April 1742</a></p>
+         <p>Nachmittags hatten wir noch eine kleine Conferenz weil sich die englischen Schwestern
+            nicht befriedigen laßen wolten, wegen ihres am Schiff bleiben, darinnen uns auch der
+            Heyland Anweisung gab. Wir ließen gleich darauf die englischen Schwestern zusammen
+            kommen, u redeten mit ihnen von diesem Plane.<br /><a href="1742atlantik.html#diaryPopup9">8. April 1742</a></p>
+         <p>Die Wellen bombardirten unsere Irene mit einer solchen Wucht, daß man dachte sie wolten
+            sie in den Abgrund versencken. Es war wirkℓ einem nicht anders zu Muthe als hätte
+            der Fürst der Finsterniß sein gantzes höllisches Heer aufgeboten sich diesem Häuflein
+            entgegen zu setzen. 2. starke Wellen schlugen an die Cajute an, nicht anders als ob
+            sie sie in Stücken zerschlagen wolten. Die Eine schlug beym obersten kleinen Cajuten
+            Fenster herein [...]<br /><a href="1749atlantik.html#diaryPopup21">29.3.1749</a></p>
+         <p>Oklee wurde heute von einem Preß-Gang hinweg genommen. Es machte uns viele Angst;
+            der Heyland aber half ihm wieder durch. Es war eine Zucht für Oklee<br /><a href="1742kanal.html#diaryPopup1">16.3.1742</a></p>
+         <p>Ein Schiff war diese Nacht gleich bey unserm auf ein anders gerennt und gesunken.<br /><a href="1742kanal.html#diaryPopup2">19.3.1742</a></p>
+         <p>Br: Hardten schrieb einen Brief an Br: Piesch worinnen er Friede anbiethet, aber doch
+            seiner Frauen neue Beschuldigungen aufbürdet.<br /><a href="1742kanal.html#diaryPopup3">22.3.1742</a></p>
+         <p>Unsre ledge Brr: waren früh um 4 Uhr auf der Decke, die Ostern an zu fangen. Sie waren
+            sehr vergnügt, u uns allen erwecklich.<br /><a href="1742kanal.html#diaryPopup5">25.3.1742</a></p>
+         <p>Vormittags hielten wir eine Englische und eine teutsche Stunde. Die Englische hielten
+            wir auf der Decke, es waren alle die Seeleute dabey.<br /><a href="1742kanal.html#diaryPopup5">25.3.1742</a></p>
+         <p>Wir sahen auch ein fremdes Schiff, für dem sich die Schiffleute furchten, wir aber
+            waren getrost.<br /><a href="1742kanal.html#diaryPopup6">26.3.1742</a></p>
+         <p>Der Wind war sehr vor uns, aber wir waren in der Spanischen See, und das Schiff wankte,
+            das machte unsre Leute sehr krank.<br /><a href="1742atlantik.html#diaryPopup1">27.3.1742</a></p>
+         <p>Tannebergerin war sehr krank. Sie hatte eine sehr starke hizige Krankheit, u in ihren
+            Händen hatte sie Convulsiones.<br /><a href="1742atlantik.html#diaryPopup3">29.3.1742</a></p>
+         <p>Früh hatten wir contrairen Wind, u wurde auf einmal ganz stürmisch, daß wir auch genöthigt
+            waren unsre Seegel zum Theil ein zu nehmen. Ich schlug drauf die Loosung auf den 12
+            Jul. 1742. Und ehe eine 4telstunde vergieng war der Wind ganz vortrefflich vor uns,
+            so daß wir sehr geschwind fortgiengen.<br /><a href="1742atlantik.html#diaryPopup4">30.3.1742</a></p>
+         <p>Gegen 8 Uhr hatten wir ein allgemeines Liebesmahl, dazu wir auch den Captain admittirten
+            der sehr vergnügt war u die Güte des Hln preisete, der ihn ließe so viele von seinen
+            Kindern über die See fahren. Ferner sagte er wie getrost ihn dieses
+            mache bey seinen Fatiguen.<br /><a href="1742atlantik.html#diaryPopup7">2.4.1742</a></p>
+         <p>Nachmittags hatten wir noch eine kleine Conferenz weil sich die englischen Schwestern
+            nicht befriedigen laßen wolten, wegen ihres am Schiff bleiben, darinnen uns auch der
+            Heyland Anweisung gab. Wir ließen gleich darauf die englischen Schwestern zusammen
+            kommen, u redeten mit ihnen von diesem Plane.<br /><a href="1742atlantik.html#diaryPopup9">8.4.1742</a></p>
+         <p>On Board hatten unsre Geschwister auch Besuch von einem Man of War. Diese Leute verwunderten
+            sich sehr über unsre Ordnung im Äußern.<br /><a href="1742atlantik.html#diaryPopup9">7.4.1742</a></p>
+         <p>Viele Portugiesen waren heute auf unserm Schiff, sie führten sich aber sehr unhöflich
+            auf<br /><a href="1742atlantik.html#diaryPopup9">8.4.1742</a></p>
+         <p>Nachmittags ging Böhler mit dem Capitain ans Land, und es wurde ihnen eine merkwürdige
+            Beschreibung gegeben von ein paar Pfaffen, welche erst kürzlich von Lissbon hieher
+            gekommen und sehr scharff predigten, u von hier wollen nach den Westen Islands gehn,
+            u denn von da nach Ostindien, wo sie zu sterben gedenken.<br /><a href="1742atlantik.html#diaryPopup9">9.4.1742</a></p>
+         <p>Gegen Abend lichteten wir Anker, u da der Anker loß war, so war auch der Wind weg,
+            u wir waren in Gefahr auf andre Schiffe zu treiben. Der Heyl: aber half gnädiglich
+            durch.<br /><a href="1742atlantik.html#diaryPopup9">10.4.1742</a></p>
+         <p>Man observiret, daß überhaupt jezo eine geseegnete Zeit ist, nachdem die Seekrankheit
+            nachgelaßen, so siehet man wieder so viel lichte und heitre Gesichter.<br /><a href="1742atlantik.html#diaryPopup11">12.4.1742</a></p>
+         <p>Heute Nacht hatte unsre Schw. Hussey einen Zufall von einem Schlag an den linken Arm,
+            als sie gestern Abends auf der Decke lag: Sie ist aber nun wieder vollig restituirt.<br /><a href="1742atlantik.html#diaryPopup17">18.4.1742</a></p>
+         <p>Man spührte auch daß die Gnade auch unter den Matrosen arbeitete.<br /><a href="1742atlantik.html#diaryPopup17">18.4.1742</a></p>
+         <p>Es begegneten uns heute 2 Schiffe die von St. Christophel kommen, und nach London
+            giengen. Mit denen schickten wir Briefe nach London, darinnen wir Nachricht gaben
+            von unsern Umständen. Sie wusten Anfangs nicht was vor Schiff es wären, aber die meisten
+            unsrer Brr: waren sehr phlegmatisch dabey, ob sie gleich etl: Canonen loßschoßen,
+            u alle Matrosen dachten es seyen Spanier.<br /><a href="1742atlantik.html#diaryPopup23">24.4.1742</a></p>
+         <p>Nachhero kam Br: Joh: Powell mit mir zu sprechen, da er denn die bittersten Thränen
+            vor mir weinte wegen seiner Umstände, daß er die Gemeine so sehr liebte, u doch mit
+            seiner Frau nicht könte zufrieden seyn.<br /><a href="1742atlantik.html#diaryPopup27">16.5.1742</a></p>
+         <p>Bryzeliusin war heute ohnmächtig.<br /><a href="1742atlantik.html#diaryPopup29">21.5.1742</a></p>
+         <p>Früh zwischen 7 – 8 Uhr huben wir unsre Anker auf, der Wind war aber contrair, doch
+            kamen wir zwischen Long Island und dem nechsten Lande hinein, nicht weit von Fishers
+            Island. Unsre Walze war heute gebrochen, daß wir bald den Anker
+            verlohren hätten, auch brachen ein paar Foreshrouts.<br /><a href="1742atlantik.html#diaryPopup30">22.5.1742</a></p>
+         <p>Es war alles erfreut und lebendig, das Gebüsche und grünen Felder zu sehen.<br /><a href="1742atlantik.html#diaryPopup30">22.5.1742</a></p>
+         <p>Der Capitain hätte lieber alle seine Passagier bey sich behalten, u es that ihm wehe
+            da die Brr: Abschied von ihn nahmen.<br /><a href="1742atlantik.html#diaryPopup31">26.5.1742</a></p>
+         <p>Bryzelius mit seiner Frau und noch etlichen Brüdern und Schwestern giengen heute ans
+            Land, und kamen zu einem Bauer ins Hauß, der sie freundlich aufnahm, und die Leute
+            begehrten sie solten ein Lied vor ihnen singen, so sungen si: das Lied: Lamm Lamm
+            o Lamm, pp. Die Leute bezeugten eine große Begierde etwas zu hören, und noch mehr
+            von unsern Geschwistern zu sehen und zu hören. Sie schenckten ihnen eines von unsern
+            englischen Gesangsbüchern auf ihr Begehr.<br /><a href="1742atlantik.html#diaryPopup31">26.5.1742</a></p>
+         <p>Es sprach ein alter Mann mit mir, der 10 Meilen aus dem Lande kommen war, um uns zu
+            sehen und zu hören.<br /><a href="1742atlantik.html#diaryPopup31">28.5.1742</a></p>
+         <p>Wir reiseten heute durch einen gefährlichen Ort, genannt Hellgate, oder das Höllenthor,
+            welcher viele Felsen hat, und einen starken Zug des Waßers. Der Heyland aber half
+            uns gnädig durch, obgleich das Schiff schon einmal ausreißen wolte.<br /><a href="1742amerika.html#diaryPopup1">30.5.1742</a></p>
+         <p>Zwey von Captain Brionds Töchtern kamen zu Nobles, uns zu sehen, sie konten aber nicht
+            lange bleiben, weil ihnen ihr Vater gedrohet, er wolle sie fortjagen wenn sie zu uns
+            giengen. Sie durfften auch nicht in die Stunde kommen welche ich hielt. Sie schlichen
+            sich aber doch Abends zwischen 10 und 11 Uhr, da alles in ihrem Hause schlafen war,
+            heimlich weg, und kamen zu uns, u blieben biß 1 Uhr bey uns. Wir freuten und liebten
+            uns untereinander.<br /><a href="1742amerika.html#diaryPopup1">30.5.1742</a></p>
+         <p>Als wir bey Nobles waren, überlegten Bryzelius und ich und  meine Frau es mit einander,
+            ob wir heute nicht fortgehen sollten. Des &gt;Heylnds Antwort aber war wir sollten heute
+            nicht daran denken* und ob wir einige unsrer Leute solten laßen ans Land gehen? *
+            Nein.<br /><a href="1742amerika.html#diaryPopup1">30.5.1742</a></p>
+         <p>Als wir in Newyork ankamen, erkundigten wir uns wegen unsrer Brr: die mit Pieschen
+            voraus gegangen, und welche wir vermutheten schon in Philadelphia zu seyn, allein
+            wir erfuhren nichts von ihnen, das verursachte uns allerley Gedancken. Nachmittags
+            um 4 Uhr aber traten Br: Piesch und Brandmüller unvermuthet in die Stube, bey Nobles
+            welches uns erstaunte und erfreute<br /><a href="1742amerika.html#diaryPopup1">30.5.1742</a></p>
+         <p>Nach 8. Uhr in der Nacht fing der Wind überraus stark an zu wehen u. das Schiff wanckte
+            sehr: Zwischen 11. u 12. Uhr zerbrachen die Hölzer in der Walze womit man den Anker
+            heraufziehe, u. obgleich darinen war so hielten die doch ### auf, sondern zerbrachen
+            wie Schwefelhölzechen u. das Ankerthau zerriß sich mit großem Krach aus dem Schiffe
+            loos, u. unser Schiff hatte also keinen Halt mehr. Es lief gleich alles auf die Decke
+            u. manche dachten der Mast sey eingebrochen, andre der Donner habe eingeschlgn u.
+            s. f. Das Schiff war wohl währender Reise noch nicht in größere Gefahr gewesen als
+            diesesmahl.<br /><a href="1742amerika.html#diaryPopup5">4.6.1742</a></p>
+      </div>
       <footer class="footer l-box pure-g">
          
          <div class="pure-u-1 pure-u-md-5-24 carbonbadgeContainer">
@@ -469,5 +581,5 @@
             <p class="logo-caption">Gefördert durch das BMBF-Verbundprojekt HERMES (Verbundpartner Leibniz-Institut für
                Europäische Geschichte)</p>
             </div>
-         </footer><script type="text/javascript" src="js/main.js"></script></body>
+         </footer><script type="text/javascript" src="js/main.js"></script><script type="text/javascript" src="js/quotes.js"></script></body>
 </html>
