--- a/1742kanal.html
+++ b/1742kanal.html
@@ -74,7 +74,7 @@
          </div>
          <div class="pure-g">
             <div class="pure-u-1 pure-u-md-3-24"></div>
-            <div class="pure-u-1 pure-u-md-2-24"><a class="pure-button button-secondary howto-button" onclick="ShowHTUFunction()">How to Use</a><a class="pure-button button-secondary tei-button" target="_blank" href="github.com">XML/TEI</a></div>
+            <div class="pure-u-1 pure-u-md-2-24"><a class="pure-button button-secondary howto-button" onclick="ShowHTUFunction()">Info</a><a class="pure-button button-secondary tei-button" target="_blank" href="github.com">XML/TEI</a></div>
             <div class="pure-u-1 pure-u-md-13-24"></div>
             <div class="pure-u-1 pure-u-md-3-24"><a class="pure-button button-secondary reset-button" onclick="resetZoom()">Reset Zoom</a><a id="routeOff" class="pure-button button-secondary hidegraph-button" onclick="hidegraph()">Route ausblenden</a><a id="routeOn" class="pure-button button-secondary showgraph-button" onclick="showgraph()">Route einblenden</a></div>
             <div class="pure-u-1 pure-u-md-3-24"></div>
@@ -84,6 +84,14 @@
             <p>Jede/r Punkt/Nadel mappt den jeweiligen Aufenthaltsort bzw. eine gesichtete Landmarke
                eines Tages. Klicken Sie auf die <u>Nadeln</u>, um sich die jeweiligen <u>Tagebucheinträge</u> anzeigen zu lassen. Größere Nadeln fassen mehrere Einträge zusammen. Mouseover auf
                eine Nadel blendet das Datum der Sichtung oder des Aufenthaltes ein.</p>
+            <h3 class="howto-h3">Quelle</h3>
+            <p>
+               Autor: Peter Böhler<a href="https://d-nb.info/gnd/117609080">↬
+                  </a><br />Titel: P. Böhlers Reisediarium 1742, von London nach Philadelphia<br />Vorlage: Unitätsarchiv Herrnhut<a href="https://www.unitaetsarchiv.de">↬
+                  </a>, R.14.A.35.3</p>
+            <h3 class="howto-h3">Transkription</h3>
+            <p>
+               Status: Ersttranskription ist erfolgt<br />Urheber:in Ersttranskription: N.N.<br />Urheber:in Kollation (Zweittranskription): N.N.</p>
          </div>
          <div class="pure-g">
             <div class="pure-u-3-24"></div>
