--- a/1746amerika.html
+++ b/1746amerika.html
@@ -74,18 +74,26 @@
          </div>
          <div class="pure-g">
             <div class="pure-u-1 pure-u-md-3-24"></div>
-            <div class="pure-u-1 pure-u-md-2-24"><a class="pure-button button-secondary howto-button" onclick="ShowHTUFunction()">How to Use</a><a class="pure-button button-secondary tei-button" target="_blank" href="github.com">XML/TEI</a></div>
+            <div class="pure-u-1 pure-u-md-2-24"><a class="pure-button button-secondary howto-button" onclick="ShowHTUFunction()">Info</a><a class="pure-button button-secondary tei-button" target="_blank" href="github.com">XML/TEI</a></div>
             <div class="pure-u-1 pure-u-md-13-24"></div>
             <div class="pure-u-1 pure-u-md-3-24"><a class="pure-button button-secondary reset-button" onclick="resetZoom()">Reset Zoom</a><a id="routeOff" class="pure-button button-secondary hidegraph-button" onclick="hidegraph()">Route ausblenden</a><a id="routeOn" class="pure-button button-secondary showgraph-button" onclick="showgraph()">Route einblenden</a></div>
             <div class="pure-u-1 pure-u-md-3-24"></div>
          </div>
          <div class="HTUPopuptext" id="HTUPopup">
             <h3 class="howto-h3">How to Use</h3>
-            <ul>
-               <li>Klicken Sie auf die Punkte/Nadeln, um sich die jeweiligen Tagebucheinträge anzeigen
-                  zu lassen. Eine Nadel mappt den jeweiligen Übernachtungsort. Mouseover auf eine Nadel
-                  blendet das Datum ein.</li>
-            </ul>
+            <p>Klicken Sie auf die Punkte/Nadeln, um sich die jeweiligen Tagebucheinträge anzeigen
+               zu lassen. Eine Nadel mappt den jeweiligen Übernachtungsort. Mouseover auf eine Nadel
+               blendet das Datum ein.</p>
+            <h3 class="howto-h3">Quelle</h3>
+            <p>
+               Autor: Friedrich Cammerhoff<a href="https://d-nb.info/gnd/117669369">↬
+                  </a><br />Titel: Journal and nautical record by Friedrich Cammerhoff from his sea voyage from London,
+               England, to Pennsylvania, aboard the "Snow John Galley"<br />Vorlage: 
+               Moravian Archives Bethlehem<a href="https://www.moravianchurcharchives.org">↬
+                  </a>, TravJournals - 26</p>
+            <h3 class="howto-h3">Transkription</h3>
+            <p>
+               Status: Kollation (Zweittranskription) ist erfolgt<br />Urheber:in Ersttranskription: Martin Prell<br />Urheber:in Kollation (Zweittranskription): Martin Prell</p>
          </div>
          <div class="pure-g">
             <div class="pure-u-3-24"></div>
