--- a/1752.html
+++ b/1752.html
@@ -74,7 +74,7 @@
          </div>
          <div class="pure-g">
             <div class="pure-u-1 pure-u-md-3-24"></div>
-            <div class="pure-u-1 pure-u-md-2-24"><a class="pure-button button-secondary howto-button" onclick="ShowHTUFunction()">How to Use</a><a class="pure-button button-secondary tei-button" target="_blank" href="github.com">XML/TEI</a></div>
+            <div class="pure-u-1 pure-u-md-2-24"><a class="pure-button button-secondary howto-button" onclick="ShowHTUFunction()">Info</a><a class="pure-button button-secondary tei-button" target="_blank" href="github.com">XML/TEI</a></div>
             <div class="pure-u-1 pure-u-md-13-24">
                <div class="audio-container"><audio id="audio1" controls="controls" preload="none" data-src="audio/1752.opus">
                      <source src="audio/1752.opus" type="audio/ogg"></source></audio></div>
@@ -88,6 +88,16 @@
                zwischen im Tagebuch erwähnten Landmarken (erkennbar an den Richtungswechseln der
                Route) wieder. Klicken Sie auf die Nadeln, um sich die jeweiligen Tagebucheinträge
                anzeigen zu lassen. Mouseover auf eine Nadel blendet das Datum ein.</p>
+            <h3 class="howto-h3">Quelle</h3>
+            <p>
+               Autor: Anna Johanna Piesch<a href="https://d-nb.info/gnd/1147242151">↬
+                  </a><br />Titel: Anna Johanna von London nach Bethlehem. 1752.<br />Vorlage: 
+               Unitätsarchiv Herrnhut<a href="https://www.unitaetsarchiv.de">↬
+                  </a>, R.14.A.35.14</p>
+            <h3 class="howto-h3">Transkription</h3>
+            <p>
+               Status: Ersttranskription ist erfolgt<br />Urheber:in Ersttranskription: Jennifer Büttner, Sophie Lindauer, Dean Showers (im Rahmen einer Online-Übung mit Studierenden)
+               <br />Urheber:in Kollation (Zweittranskription): N.N.</p>
          </div>
          <div class="pure-g">
             <div class="pure-u-3-24"></div>
@@ -1171,11 +1181,14 @@
          </div>
          <div class="voyant-container">
             <h1 class="travel-overview">Textanalyse mit Voyant Tools</h1>
-            <div><a class="pure-button button-secondary" onclick="ShowHTUFunction2()">How to Use</a></div>
-            <div class="pure-g">
-               <div class="pure-u-1 pure-u-md-11-24"><iframe class="voyant-iframe" src="https://voyant-tools.org/?view=cirrus&amp;stopList=https://mprell.github.io/moravians-at-sea-Prod/voyant/stopwords.txt&amp;input=https://mprell.github.io/moravians-at-sea-Prod/voyant/Diarium1752.txt"></iframe></div>
-               <div class="pure-u-1 pure-u-md-1-24"></div>
-               <div class="pure-u-1 pure-u-md-11-24"><iframe class="voyant-iframe" src="https://voyant-tools.org/?view=reader&amp;input=https://mprell.github.io/moravians-at-sea-Prod/voyant/Diarium1752.txt"></iframe></div>
+            <div class="voyant-button"><button class="pure-button button-secondary" onclick="loadIframes()">Lade Voyant Tools</button></div>
+            <div id="iframes-lazy-load">
+               <div><a class="pure-button button-secondary" onclick="ShowHTUFunction2()">How to Use</a></div>
+               <div class="pure-g">
+                  <div class="pure-u-1 pure-u-md-11-24"><iframe class="voyant-iframe" data-src="https://voyant-tools.org/?view=cirrus&amp;stopList=https://mprell.github.io/moravians-at-sea-Prod/voyant/stopwords.txt&amp;input=https://mprell.github.io/moravians-at-sea-Prod/voyant/Diarium1752.txt"></iframe></div>
+                  <div class="pure-u-1 pure-u-md-1-24"></div>
+                  <div class="pure-u-1 pure-u-md-11-24"><iframe class="voyant-iframe" data-src="https://voyant-tools.org/?view=reader&amp;input=https://mprell.github.io/moravians-at-sea-Prod/voyant/Diarium1752.txt"></iframe></div>
+               </div>
             </div>
          </div>
          <div class="HTUPopuptext" id="HTUPopup2">
