--- a/1753amerika.html
+++ b/1753amerika.html
@@ -74,19 +74,25 @@
          </div>
          <div class="pure-g">
             <div class="pure-u-1 pure-u-md-3-24"></div>
-            <div class="pure-u-1 pure-u-md-2-24"><a class="pure-button button-secondary howto-button" onclick="ShowHTUFunction()">How to Use</a><a class="pure-button button-secondary tei-button" target="_blank" href="github.com">XML/TEI</a></div>
+            <div class="pure-u-1 pure-u-md-2-24"><a class="pure-button button-secondary howto-button" onclick="ShowHTUFunction()">Info</a><a class="pure-button button-secondary tei-button" target="_blank" href="github.com">XML/TEI</a></div>
             <div class="pure-u-1 pure-u-md-13-24"></div>
             <div class="pure-u-1 pure-u-md-3-24"><a class="pure-button button-secondary reset-button" onclick="resetZoom()">Reset Zoom</a><a id="routeOff" class="pure-button button-secondary hidegraph-button" onclick="hidegraph()">Route ausblenden</a><a id="routeOn" class="pure-button button-secondary showgraph-button" onclick="showgraph()">Route einblenden</a></div>
             <div class="pure-u-1 pure-u-md-3-24"></div>
          </div>
          <div class="HTUPopuptext" id="HTUPopup">
             <h3 class="howto-h3">How to Use</h3>
-            <ul>
-               <li>Klicken Sie auf die Punkte/Nadeln, um sich die jeweiligen Tagebucheinträge anzeigen
-                  zu lassen. Eine Nadel mappt den jeweiligen Übernachtungsort. Größere Nadeln zeigen
-                  längere Aufenthalte an einem Ort an und enthalten immer mehrere Einträge. Mouseover
-                  auf eine Nadel blendet das Aufenthaltsdatum ein.</li>
-            </ul>
+            <p>Klicken Sie auf die Punkte/Nadeln, um sich die jeweiligen Tagebucheinträge anzeigen
+               zu lassen. Eine Nadel mappt den jeweiligen Übernachtungsort. Größere Nadeln zeigen
+               längere Aufenthalte an einem Ort an und enthalten immer mehrere Einträge. Mouseover
+               auf eine Nadel blendet das Aufenthaltsdatum ein.</p>
+            <h3 class="howto-h3">Quelle</h3>
+            <p>
+               Autor: N.N.<br />Titel: Diarium der Seegemeine von Chelsea nach Bethlehem. 15.Juni-14.Sept.1753<br />Vorlage: 
+               Unitätsarchiv Herrnhut<a href="https://www.unitaetsarchiv.de">↬
+                  </a>, R.14.A.35.15</p>
+            <h3 class="howto-h3">Transkription</h3>
+            <p>
+               Status: Ersttranskription ist erfolgt<br />Urheber:in Ersttranskription: N.N.<br />Urheber:in Kollation (Zweittranskription): N.N.</p>
          </div>
          <div class="pure-g">
             <div class="pure-u-3-24"></div>
