--- a/1761.html
+++ b/1761.html
@@ -85,11 +85,14 @@
          </div>
          <div class="voyant-container">
             <h1 class="travel-overview">Textanalyse mit Voyant Tools</h1>
-            <div><a class="pure-button button-secondary" onclick="ShowHTUFunction()">How to Use</a></div>
-            <div class="pure-g">
-               <div class="pure-u-1 pure-u-md-11-24"><iframe class="voyant-iframe" src="https://voyant-tools.org/?view=cirrus&amp;stopList=https://mprell.github.io/moravians-at-sea-Prod/voyant/stopwords.txt&amp;input=https://mprell.github.io/moravians-at-sea-Prod/voyant/Diarium1761.txt"></iframe></div>
-               <div class="pure-u-1 pure-u-md-1-24"></div>
-               <div class="pure-u-1 pure-u-md-11-24"><iframe class="voyant-iframe" src="https://voyant-tools.org/?view=reader&amp;input=https://mprell.github.io/moravians-at-sea-Prod/voyant/Diarium1761.txt"></iframe></div>
+            <div class="voyant-button"><button class="pure-button button-secondary" onclick="loadIframes()">Lade Voyant Tools</button></div>
+            <div id="iframes-lazy-load">
+               <div><a class="pure-button button-secondary" onclick="ShowHTUFunction()">How to Use</a></div>
+               <div class="pure-g">
+                  <div class="pure-u-1 pure-u-md-11-24"><iframe class="voyant-iframe" data-src="https://voyant-tools.org/?view=cirrus&amp;stopList=https://mprell.github.io/moravians-at-sea-Prod/voyant/stopwords.txt&amp;input=https://mprell.github.io/moravians-at-sea-Prod/voyant/Diarium1761.txt"></iframe></div>
+                  <div class="pure-u-1 pure-u-md-1-24"></div>
+                  <div class="pure-u-1 pure-u-md-11-24"><iframe class="voyant-iframe" data-src="https://voyant-tools.org/?view=reader&amp;input=https://mprell.github.io/moravians-at-sea-Prod/voyant/Diarium1761.txt"></iframe></div>
+               </div>
             </div>
          </div>
          <div class="HTUPopuptext" id="HTUPopup">
