test withcabin analytics

--- a/index.html
+++ b/index.html
@@ -581,5 +581,5 @@
             <p class="logo-caption">Gefördert durch das BMBF-Verbundprojekt HERMES (Verbundpartner Leibniz-Institut für
                Europäische Geschichte)</p>
             </div>
-         </footer><script type="text/javascript" src="js/main.js"></script><script type="text/javascript" src="js/quotes.js"></script></body>
+         </footer><script type="text/javascript" src="js/main.js"></script><script type="text/javascript" src="js/quotes.js"></script><script async defer src="https://scripts.withcabin.com/hello.js"></script></body>
 </html>
