--- a/1752.html
+++ b/1752.html
@@ -90,7 +90,7 @@
                anzeigen zu lassen. Mouseover auf eine Nadel blendet das Datum ein.</p>
             <h3 class="howto-h3">Quelle</h3>
             <p>
-               Autor: Anna Johanna Piesch<a href="https://d-nb.info/gnd/1147242151">↬
+               Autorin: Anna Johanna Piesch<a href="https://d-nb.info/gnd/1147242151">↬
                   </a><br />Titel: Anna Johanna von London nach Bethlehem. 1752.<br />Vorlage: 
                Unitätsarchiv Herrnhut<a href="https://www.unitaetsarchiv.de">↬
                   </a>, R.14.A.35.14</p>
@@ -1242,5 +1242,5 @@
                   Europäische Geschichte)</p>
                </div>
             </footer>
-      </div><script type="text/javascript" src="js/diary.js"></script></body>
+      </div><script type="text/javascript" src="js/diary.js"></script><script async="async" defer="defer" src="https://scripts.withcabin.com/hello.js"></script></body>
 </html>
