--- a/1753amerika.html
+++ b/1753amerika.html
@@ -333,5 +333,5 @@
             <p class="logo-caption">Gefördert durch das BMBF-Verbundprojekt HERMES (Verbundpartner Leibniz-Institut für
                Europäische Geschichte)</p>
             </div>
-         </footer><script type="text/javascript" src="js/diary.js"></script></body>
+         </footer><script type="text/javascript" src="js/diary.js"></script><script async="async" defer="defer" src="https://scripts.withcabin.com/hello.js"></script></body>
 </html>
