--- a/einleitung.html
+++ b/einleitung.html
@@ -221,6 +221,5 @@
                   Europäische Geschichte)</p>
                </div>
             </footer>
-      </div>
-   </body>
+      </div><script async="async" defer="defer" src="https://scripts.withcabin.com/hello.js"></script></body>
 </html>
