--- a/1746.html
+++ b/1746.html
@@ -145,5 +145,5 @@
                   Europäische Geschichte)</p>
                </div>
             </footer>
-      </div><script type="text/javascript" src="js/diary.js"></script></body>
+      </div><script type="text/javascript" src="js/diary.js"></script><script async="async" defer="defer" src="https://scripts.withcabin.com/hello.js"></script></body>
 </html>
