--- a/1753.html
+++ b/1753.html
@@ -127,5 +127,5 @@
                   Europäische Geschichte)</p>
                </div>
             </footer>
-      </div><script type="text/javascript" src="js/diary.js"></script></body>
+      </div><script type="text/javascript" src="js/diary.js"></script><script async="async" defer="defer" src="https://scripts.withcabin.com/hello.js"></script></body>
 </html>
