--- a/1761atlantik.html
+++ b/1761atlantik.html
@@ -1004,5 +1004,5 @@ viel über 1/3 der Reise geschafft-->
             <p class="logo-caption">Gefördert durch das BMBF-Verbundprojekt HERMES (Verbundpartner Leibniz-Institut für
                Europäische Geschichte)</p>
             </div>
-         </footer><script type="text/javascript" src="js/diary.js"></script></body>
+         </footer><script type="text/javascript" src="js/diary.js"></script><script async="async" defer="defer" src="https://scripts.withcabin.com/hello.js"></script></body>
 </html>
