--- a/1752.html
+++ b/1752.html
@@ -79,7 +79,9 @@
          </div>
          <div class="pure-g">
             <div class="pure-u-1 pure-u-md-3-24"></div>
-            <div class="pure-u-1 pure-u-md-2-24"><a class="pure-button button-secondary howto-button" onclick="ShowHTUFunction()">Info</a><a class="pure-button button-secondary tei-button" target="_blank" href="github.com">XML/TEI</a></div>
+            <div class="pure-u-1 pure-u-md-2-24"><a class="pure-button button-secondary howto-button" onclick="ShowHTUFunction()">Info</a><a class="pure-button button-secondary tei-button" target="_blank" href="https://zenodo.org/records/14066286/preview/1752Text.xml">XML/TEI
+                  
+                  <div class="zenodo">(Zenodo)</div></a></div>
             <div class="pure-u-1 pure-u-md-13-24">
                <div class="audio-container"><audio id="audio1" controls="controls" preload="none" data-src="audio/1752.opus">
                      <source src="audio/1752.opus" type="audio/ogg"></source></audio></div>
