--- a/einleitung.html
+++ b/einleitung.html
@@ -170,7 +170,8 @@
                Code der Seite grundlegend überarbeitet (Reduzierung, Statisierung und Greening).</p>
             <h1>Weiterführende Literatur zu Herrnhuter Seereisen und zum Projekt</h1>
             <ul>
-               <li>Gisela Mettele: Weltbürgertum oder Gottesreich. Die Herrnhuter Brüdergemeine als globale
+               <li>Martin Prell: Abschlussbericht über die erzielten Arbeitsergebnisse des Projektes "Moravians@Sea 2.0". Zenodo 2025; DOI: <a href="https://doi.org/10.5281/zenodo.15162542">10.5281/zenodo.15162542</a>.</li>
+			   <li>Gisela Mettele: Weltbürgertum oder Gottesreich. Die Herrnhuter Brüdergemeine als globale
                   Gemeinschaft 1727–1857. Göttingen 2009.</li>
                <li>Gisela Mettele: Gemeine auf hoher See: Meeresüberfahrten der Herrnhuter Brüdergemeine
                   im 18. Jahrhundert. In: Peter Burschel und Sünne Juterczenka (Hg.): Das Meer. Maritime
